--- a/force-app/main/default/aura/whosViewing/whosViewing.cmp
+++ b/force-app/main/default/aura/whosViewing/whosViewing.cmp
@@ -1,26 +1,19 @@
 <aura:component controller="whosViewingController" implements="flexipage:availableForAllPageTypes,force:hasRecordId" access="global" >
-    <!-- Attributes -->
     <aura:attribute name="whosViewing" type="Object[]"/>
     <aura:attribute name="label" type="String" default="Who's Viewing" description="The custom label for the utility bar item."/>
     <aura:attribute name="recordId" type="Id"/>
     <aura:attribute name="priorRecordId" type="string"/>
     <aura:attribute name="isMuted" type="Boolean" default="false"/>
     <aura:attribute name="readNotification" type="Boolean" default="true"/>
-
-    <!-- Handlers & Events -->
     <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>
     <aura:handler name="change" value="{!v.recordId}" action="{!c.recordChange}"/>
     <aura:handler name="change" value="{!v.whosViewing}" action="{!c.utlityNotifications}"/>
     <aura:registerEvent name="toastEvent" type="force:showToast"/>
-
-    <!-- Non-visual components -->
     <lightning:utilityBarAPI aura:id="utilitybar"/>
-    <c:streaming channel="/event/whosViewing__e" onMessage="{!c.handleMessage}"/>
-    
     <div class="container">
         <!-- Header -->
-        <div class="slds-p-around_x-small slds-border_bottom slds-theme_shade">
-            <div class="slds-grid slds-grid_align-spread slds-grid_vertical-align-center">
+        <div class="slds-p-around--x-small slds-border--bottom slds-theme--shade">
+            <div class="slds-grid slds-grid--align-spread slds-grid--vertical-align-center">
                 <div>
                     <span class="slds-badge">{!v.whosViewing.length}</span>
                 </div>
@@ -32,14 +25,12 @@
                 </div>
             </div>
         </div>
-        
         <!-- Concurrent Viewers list -->
+        <c:streaming channel="/event/whosViewing__e" onMessage="{!c.handleMessage}"/>
         <lightning:card title="Who is also viewing this record." class="cardHeight">
-            <div class="slds-scrollable_y content">
+            <div class="slds-container--fluid slds-scrollable--y content">
                 <aura:iteration items="{!v.whosViewing}" var="view">
-                    <div class="slds-p-around_small slds-border_bottom">
-                        <c:userView userId="{!view.userId__c}" time="{!view.timestamp__c}"/>
-                    </div>
+                    <c:userView userId="{!view.userId__c}" time="{!view.timestamp__c}"/>
                 </aura:iteration>
             </div>
         </lightning:card>
